# scilpy

./: .gitignore  import_requirements.sh  pyproject.toml  pytest.ini  setup.py
.github/workflows/: distribute.yml  freeze.yml  freeze_requirements.yml  merge.yml  publish.yml  release.yml  test.yml
data/: test_data.json
docs/source/: index.rst
docs/source/documentation/: github_actions.rst
scilpy/: version.py
scilpy/gpuparallel/: opencl_utils.py
scilpy/gradientsampling/: load_gradient_sampling.py  save_gradient_sampling.py
scilpy/io/: fetcher.py  utils.py
scilpy/tracking/: tracker.py
scilpy/utils/: bvec_bval_tools.py
scilpy/viz/: color.py
scilpy/viz/backends/: pil.py
scripts/: scil_compute_fodf_max_in_ventricles.py  scil_compute_local_tracking.py  scil_compute_msmt_fodf.py  scil_compute_pft.py  scil_convert_fsl_to_siemens.py  scil_convert_gradients.py  scil_gradients_validate_correct.py  scil_validate_bids.py  scil_viz_fodf.py
scripts/tests/: test_execute_angle_aware_bilateral_filtering.py  test_viz_colors.py
