[build-system]

requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]

name = "scilpy"

version = "1.6.0"

description = "Scilpy: diffusion MRI tools and utilities"

license = "MIT"

authors = ["The SCIL developers"]

maintainers = [
    "Arnaud Boré <arnaud.bore@gmail.com>"
]

readme = "README.md"

homepage = "https://scil.usherbrooke.ca/"

repository = "https://github.com/scilus/scilpy.git"

documentation = "https://scil-documentation.readthedocs.io/en/latest/"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering"
]

packages = [
    { include = "scilpy" },
    { include = "scripts" }
]

include = ["data"]

exclude = ["*/test*", "**/test*"]

[tool.poetry.dependencies]

python = "^3.8"

bids-validator = "==1.9.*"
bz2file = "==0.98.*"
cython = ">=0.29.dev0,<0.29.29 || >0.29.29,<0.30.dev0"
bctpy = "==0.5.*"
coloredlogs = "==15.0.*"
cvxpy = "==1.3.*"
cycler = "==0.11.*"
deepdiff = "6.3.0"
dmri-amico = "==1.5.*"
dmri-commit = "==1.6.*"
docopt = "==0.6.*"
formulaic = "==0.3.*"
fury = "==0.8.*"
future = "==0.18.*"
gitpython = "==3.1.*"
h5py = ">=2.8.0"
joblib = "==1.2.*"
kiwisolver = "==1.4.*"
matplotlib = "==3.6.*"
nibabel = "==4.0.*"
nilearn = "==0.9.*"
numpy = "==1.23.*"
openpyxl = "==3.0.*"
pillow = "==10.0.*"
pybids = "==0.15.*"
pyparsing = "==3.0.*"
pysocks = "==1.7.*"
pytest = "==7.2.*"
pytest-console-scripts = "==1.3.*"
pytest-mock = "==3.10.*"
python-dateutil = "==2.8.*"
pytz = "==2022.6.*"
scikit-learn = "==1.2.*"
scipy = "==1.9.*"
six = "==1.16.*"
spams = "==2.6.*"
statsmodels = "==0.13.*"
trimeshpy = "0.0.2"
vtk = "==9.2.*"
packaging = ">=19.0"
tqdm = ">=4.30.0"
requests = "==2.28.*"
